[workspace]
members = ["crates/*", "bins/*"]

[workspace.dependencies]
tokio = { version = "1.21.2", features = ["net", "macros", "rt", "rt-multi-thread", "time", "fs", "io-util"] }
serde = { version = "1.0.152", features = ["derive"] }
clap = { version = "4.1.1", features =  ["derive"] }
async-trait = "0.1.64"
serde_json = "1.0.93"
thiserror = "1.0.37"
toml = "0.5.10"
rand = "0.8.5"

binbuf = { git = "https://github.com/Techassi/binbuf", features = ["derive", "macros"] }
